Fixed z-index issue with header and block of color

--- a/frontend/sass/evictionfree/styles.scss
+++ b/frontend/sass/evictionfree/styles.scss
@@ -123,7 +123,7 @@ $max-content-width: 1440px;
     max-width: $max-content-width;
   }
   .jf-block-of-color-in-background + .hero-body {
-    z-index: 1;
+    z-index: 0;
   }
 }
 
